TNS-3: Recreated the shortcut icons and updated the ignore file. Also, removed the .sass_cache folder that was accidentally added earlier.

--- a/docroot/sites/all/themes/tns/assets/_scss/page/_lp.scss
+++ b/docroot/sites/all/themes/tns/assets/_scss/page/_lp.scss
@@ -7,6 +7,11 @@
       font-size: 0;
       line-height: 0;
       
+      .messages {
+        font-size: 14px;
+        line-height: normal;
+      }
+      
       &> .tabs {
         font-size: 14px;
         line-height: normal;
