TNS-3: Saving progress on the homepage from yesterday.

--- a/docroot/sites/all/themes/tns/assets/_scss/base/_global.scss
+++ b/docroot/sites/all/themes/tns/assets/_scss/base/_global.scss
@@ -13,11 +13,17 @@ body {
   color: $colLpCpyRt;
 }
 
+img {
+  width: 100%;
+  max-width: 100%;
+  height: auto;
+}
+
 #logo {
   display: block;
-  width: 100%;
-  max-width: 321px;
-  margin: 0 auto 50px;
+  width: 30.2469%;
+  max-width: 392px;
+  //min-width: 321px;
   
   img {
     width: 100%;
