--- a/docroot/sites/all/themes/tns/assets/_scss/page/_lp.scss
+++ b/docroot/sites/all/themes/tns/assets/_scss/page/_lp.scss
@@ -1,5 +1,11 @@
 .lp {
   &-001 {
+    
+    #logo {
+      max-width: 321px;
+      margin: 0 auto 50px;
+    }
+    
     &-content,
     &-bottom {
       a,
