--- a/docroot/sites/all/themes/tns/assets/css/screen.css
+++ b/docroot/sites/all/themes/tns/assets/css/screen.css
@@ -13,16 +13,112 @@ body {
   font-size: 11px;
   color: #3c3c3c; }
 
+img {
+  width: 100%;
+  max-width: 100%;
+  height: auto; }
+
 #logo {
   display: block;
-  width: 100%;
-  max-width: 321px;
-  margin: 0 auto 50px; }
+  width: 30.2469%;
+  max-width: 392px; }
   #logo img {
     width: 100%; }
 
+#block-system-main-menu {
+  width: 100%; }
+  #block-system-main-menu .block-title {
+    display: none; }
+  #block-system-main-menu .menu,
+  #block-system-main-menu .menu .leaf {
+    padding: 0;
+    margin: 0; }
+  #block-system-main-menu .menu {
+    width: 100%;
+    text-align: center; }
+  #block-system-main-menu .menu .leaf {
+    list-style: none;
+    display: inline-block;
+    margin: 0 1.08%; }
+    #block-system-main-menu .menu .leaf a {
+      text-transform: uppercase;
+      text-decoration: none;
+      font-weight: bold;
+      font-size: 22px;
+      letter-spacing: 2px; }
+      #block-system-main-menu .menu .leaf a:link, #block-system-main-menu .menu .leaf a:visited, #block-system-main-menu .menu .leaf a:hover, #block-system-main-menu .menu .leaf a:active, #block-system-main-menu .menu .leaf a:focus {
+        color: #fff; }
+      #block-system-main-menu .menu .leaf a:hover, #block-system-main-menu .menu .leaf a:active, #block-system-main-menu .menu .leaf a:focus {
+        text-decoration: underline; }
+
+.social-media {
+  width: 100%;
+  background: #000;
+  padding: 6px 10px;
+  margin: 0 auto;
+  text-align: center; }
+  .social-media li {
+    list-style: none;
+    display: inline-block;
+    padding: 0;
+    margin: 0 16px 0 0; }
+    .social-media li.facebook {
+      margin-right: 20px; }
+      .social-media li.facebook a:hover, .social-media li.facebook a:active, .social-media li.facebook a:focus {
+        background: url("../images/bg-icon-facebook.png") 0 0 no-repeat; }
+    .social-media li.instagram {
+      margin-right: 12px; }
+      .social-media li.instagram a:hover, .social-media li.instagram a:active, .social-media li.instagram a:focus {
+        background: url("../images/bg-icon-instagram.png") 0 0 no-repeat; }
+    .social-media li.spotify a:hover, .social-media li.spotify a:active, .social-media li.spotify a:focus {
+      background: url("../images/bg-icon-spotify.png") 0 0 no-repeat; }
+    .social-media li.itunes, .social-media li:last-child {
+      margin-right: 0; }
+    .social-media li.itunes a:hover, .social-media li.itunes a:active, .social-media li.itunes a:focus {
+      background: url("../images/bg-icon-itunes.png") 0 0 no-repeat; }
+    .social-media li.twitter a:hover, .social-media li.twitter a:active, .social-media li.twitter a:focus {
+      background: url("../images/bg-icon-twitter.png") 0 0 no-repeat; }
+    .social-media li.youtube a:hover, .social-media li.youtube a:active, .social-media li.youtube a:focus {
+      background: url("../images/bg-icon-youtube.png") 0 0 no-repeat; }
+    .social-media li a {
+      position: relative;
+      display: block;
+      text-indent: -9999px;
+      overflow: hidden;
+      text-decoration: none;
+      display: block;
+      font-size: 0;
+      text-align: start; }
+      .social-media li a img {
+        display: block;
+        opacity: 1; }
+      .social-media li a:hover img, .social-media li a:active img, .social-media li a:focus img {
+        opacity: 0; }
+
 /* Pages
  * -----------------------------------------------------------------------------*/
+.front #logo {
+  position: absolute;
+  left: 70px;
+  top: 70px;
+  z-index: 2; }
+.front #page-title {
+  display: none; }
+.front .region-content {
+  position: relative;
+  z-index: 1; }
+.front #block-system-main-menu {
+  position: absolute;
+  bottom: 14px; }
+.front .field-name-field-lp-img {
+  font-size: 0;
+  line-height: 0; }
+  .front .field-name-field-lp-img img {
+    display: block; }
+
+.lp-001 #logo {
+  max-width: 321px;
+  margin: 0 auto 50px; }
 .lp-001-content a,
 .lp-001-content input[type="submit"], .lp-001-bottom a,
 .lp-001-bottom input[type="submit"] {
