TNS-8: Created fixed footer

--- a/docroot/sites/all/themes/tns/assets/_scss/base/_mixins.scss
+++ b/docroot/sites/all/themes/tns/assets/_scss/base/_mixins.scss
@@ -27,6 +27,12 @@
   }
 }
 
+@mixin vertical-align() {
+  position: relative;
+  top: 50%;
+  @include vendorize(transform, translateY(-50%));
+}
+
 @mixin clear() {
   &:before, &:after {
     content: "\0020";
