--- a/docroot/sites/all/themes/tns/assets/_scss/base/_nav.scss
+++ b/docroot/sites/all/themes/tns/assets/_scss/base/_nav.scss
@@ -144,6 +144,13 @@
       padding: 20px 20px;
     }
     
+    @media screen and (max-width: 530px) {
+      float: left;
+      padding: 10px 10px;
+      width: 100%;
+      max-width: 100%;
+    }
+    
     .block-title {
       float: left;
       width: 20%;
